<resources>
    <string name="aplicacion">BuddyWalk</string>
    <string name="hola_mundo">Hola Mundo!</string>
    <string name="button1">Botón</string>
    <string name="inicio">Inicio</string>
    <string name="secundaria">Acción del Botón</string>
    <string name="textoSecundario">Página Secundaria!</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="login">Login</string>
    <string name="to_continue">to Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="userName">Username</string>
    <string name="register">Register</string>
    <string name="edit">Edit</string>
    <string name="change">Change your account info</string>
    <string name="changes">Apply changes</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="call">Call</string>
    <string name="pass">Password</string>
    <string name="passConfirm">Confirm Password</string>
    <string name="dialogTitle">Delete this account?</string>
    <string name="dialogMessage">All data will be lost!</string>
    <string name="or">OR</string>
    <string name="ok">OK</string>
    <string name="done">Done!</string>
    <string name="cancel">Cancel</string>
    <string name="message">Send a message</string>
    <string name="messagePage">Message</string>
    <string name="messageDescription">Enter a description</string>
    <string name="send">Send</string>
    <string name="sendLocation">Send Location</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="forgotPass">FORGOT PASSWORD?</string>
    <string name="new_user">New User?</string>
    <string name="register_now">Register Now</string>
    <string name="frame1">Paseos</string>
    <string name="frame2">Home</string>
    <string name="frame3">Preferencias</string>
    <string name="confirm">Confirm</string>
</resources>