<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.75"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_primary">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_marginLeft="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:textSize="50dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_theme_light_onPrimary"
                        android:textSize="20dp"
                        android:text="@string/sign_in"/>
                    <TextView
                        android:paddingLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_theme_light_onPrimary"
                        android:textSize="20dp"
                        android:text="@string/to_continue"/>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_margin="24dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/person">

            </ImageView>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_wave">
        </View>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_loginEmail"
                android:background="@drawable/round_inputs"
                android:paddingLeft="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/email"
                android:hint="@string/email"
                android:drawablePadding="16dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/et_loginPassword"
                android:background="@drawable/round_inputs"
                android:paddingLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="16dp"
                android:hint="@string/pass"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical">
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_button"
                android:textStyle="bold"
                android:text="@string/login">
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_dark_inversePrimary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="18sp"
                android:onClick="toForgotPassword"
                android:text="@string/forgotPass">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/or">
            </TextView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_button_google"
                android:textStyle="bold"
                android:drawableLeft="@drawable/google_logo"
                android:text="@string/google_sign_in">
            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_dark_inversePrimary"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:paddingRight="4dp"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:text="@string/new_user">
                </TextView>
                <TextView
                    android:onClick="toRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_light_primary"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:paddingLeft="4dp"
                    android:layout_weight="1"
                    android:text="@string/register_now">
                </TextView>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>