<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormRegister.fragments.FormRegisterP1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:text="ni"
            android:background="@drawable/round_inputs"
            android:paddingLeft="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/person_color"
            android:hint="@string/userName"
            android:drawablePadding="16dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/email"
            android:text="nose@nicho.cl"
            android:background="@drawable/round_inputs"
            android:paddingLeft="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email"
            android:hint="@string/email"
            android:drawablePadding="16dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/pass"
            android:text="123456"
            android:background="@drawable/round_inputs"
            android:paddingLeft="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/pass"
            android:drawablePadding="16dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/passConfirm"
            android:text="123456"
            android:background="@drawable/round_inputs"
            android:paddingLeft="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/passConfirm"
            android:drawablePadding="16dp"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>