<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_marginLeft="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messagePage"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="50dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:textSize="20dp"
                    android:text="@string/messageDescription"/>
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_margin="24dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_send">

        </ImageView>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5">
        <View
            android:background="@drawable/back_figure_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:paddingBottom="32dp"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/messageET"
                    android:background="@drawable/round_inputs"
                    android:paddingLeft="16dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_edit"
                    android:hint="@string/message"
                    android:drawablePadding="16dp"

                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:paddingTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <Button
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/round_button"
                    android:textStyle="bold"
                    android:text="@string/send">
                </Button>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>