<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight=".5">


            <TextView
                android:layout_marginLeft="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="50dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:textSize="20dp"
                    android:text="@string/sign_up"/>
                <TextView
                    android:paddingLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:textSize="20dp"
                    android:text="@string/to_continue"/>
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_margin="24dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/person">

        </ImageView>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5">
        <View
            android:background="@drawable/back_figure_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:paddingBottom="32dp"
                    android:paddingTop="32dp"
                    android:id="@+id/form_register_frag_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/cancel"
                        android:onClick="backRegisterStep"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/round_button"
                        android:textStyle="bold"
                        android:text="@string/cancel">
                    </Button>
                    <Button
                        android:id="@+id/next"
                        android:onClick="nextRegisterStep"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_button"
                        android:textStyle="bold"
                        android:text="@string/next">
                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/md_theme_light_primary"
                            android:textStyle="bold"
                            android:textAlignment="textEnd"
                            android:paddingRight="4dp"
                            android:textSize="18sp"
                            android:layout_weight="1"
                            android:text="@string/register_message">
                        </TextView>
                        <TextView
                            android:onClick="toRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/md_theme_light_primary"
                            android:textStyle="bold"
                            android:textAlignment="textStart"
                            android:textSize="18sp"
                            android:paddingLeft="4dp"
                            android:layout_weight="1"
                            android:text="@string/sign_in">
                        </TextView>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>